--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     
 </head>
 <body>
+    <h1>tudo sobre doenças</h1>
+    <h2>digite uma doença e veja uma breve descrição sobre ela!</h2>
     <div class="chat-container">
         <div class="chat-box" id="chat-box"></div>
         <div class="input-area">
