--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             <button id="send-btn">Enviar</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
